--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -2,31 +2,44 @@ name: Build and Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "testCI"]
 
 jobs:
-  # build-windows:
-  #   name: Windows 
-  #   runs-on: windows-latest
+  build-windows:
+    name: Windows 
+    runs-on: windows-latest
+    env:
+      CC: gcc
+      CXX: g++
+      CMAKE_GENERATOR: "MinGW Makefiles"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Get Submodules
+        shell: powershell
+        run: |
+          git submodule init
+          git submodule update
+      - name: Install dependencies
+        shell: powershell
+        run: |
+          Invoke-WebRequest -Uri "https://github.com/RahulVadhyar/Chronos/releases/download/CI/1.3.211.0.zip" -OutFile 1.3.211.0.zip
+          Expand-Archive -Path 1.3.211.0.zip
+          ls 1.3.211.0
+          echo "VULKAN_SDK=$(pwd)\1.3.211.0\1.3.211.0\" >>${env:GITHUB_ENV}
+      - uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            mingw-w64-x86_64-ninja
   
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Install dependencies
-  #       run: |
-  #         git submodule init
-  #         git submodule update
-  #     - name: Install Vulkan SDK
-  #       uses: humbletim/install-vulkan-sdk@v1.1.1
-  #       with:
-  #          version: 1.3.204.1
-  #          cache: true
-           
-  #     - name: Configure CMake
-  #       run: >
-  #         cmake -B build -S .
+      - name: Put MSYS2_MinGW64 on PATH
+        run: echo "D:/a/_temp/msys64/mingw64/bin" >> $GITHUB_PATH
+      - name: Configure CMake
+        run: >
+          cmake -B build -S .
   
-  #     - name: Build
-  #       run: cmake --build build --parallel
+      - name: Build
+        run: cmake --build build --parallel
         
   build-linux-gcc:
     name: Linux (GCC)
