Compile imgui.cpp first to ensure slightly faster compile time, otherwise we would have to wait at the end for imgui.cpp to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,7 +154,7 @@ ${IMGUI_BACKENDS}/imgui_impl_vulkan.cpp
 )
 
 # linking
-add_executable(ChronosEditor ${CHRONOS_CPP} ${EDITOR_FILES})
+add_executable(ChronosEditor ${EDITOR_FILES} ${CHRONOS_CPP})
 
 #vulkan sdk if using windows
 if(WIN32)
