--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,12 @@ if(CHRONOS_ENABLE_OPTIMIZATIONS)
 set(CMAKE_BUILD_TYPE Release)
 if(UNIX)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla -Werror -O3 -march=native")
-endif()
 message("All optimizations and warnings are enabled. Building for release!")
+endif()
+else()
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla -Werror -g")
+message("Building for debug!")
 endif()
 
 if(CHRONOS_SUPPORT_WAYLAND)
