Added GLM as a submodule instead of using distro/package versions for better reproducablity and less errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,9 @@ file(COPY ${SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
 add_subdirectory(ThirdParty/glfw)
 set(GLFW_DIR ThirdParty/glfw/include)
 
+#GLM
+add_subdirectory(ThirdParty/glm)
+
 #vulkan sdk if using windows
 if (WIN32)
     set(VULKAN_SDK_DIR $ENV{VULKAN_SDK})        
@@ -79,6 +82,7 @@ function(IncludeDirectories projectName)
     target_include_directories(${projectName} PUBLIC Source/Animation/Headers)
     target_include_directories(${projectName} PUBLIC Source/Common/Headers)
     target_include_directories(${projectName} PUBLIC ThirdParty/stb)
+    target_link_directories(${projectName} PUBLIC ThirdParty/glm/glm)
     target_include_directories(${projectName} PUBLIC include)
     target_include_directories(${projectName} PUBLIC ${FONTS_DIR})
     target_include_directories(${projectName} PUBLIC ${GLFW_DIR})  
@@ -91,6 +95,7 @@ function(IncludeDirectories projectName)
         target_link_libraries(${projectName} vulkan)   
     endif(UNIX)
     target_link_libraries(${projectName} glfw)
+    target_link_libraries(${projectName} glm)
 
 endfunction()
 
