--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ option(CHRONOS_ENABLE_OPTIMIZATIONS "Enable compiler optimizations and enable mo
 if(CHRONOS_ENABLE_OPTIMIZATIONS)
 set(CMAKE_BUILD_TYPE Release)
 if(UNIX)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla -Wno-format-truncation -Werror -O3 -march=native")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla -O3 -march=native")
 message("All optimizations and warnings are enabled. Building for release!")
 endif()
 else()
 set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla -Wno-format-truncation -Werror")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla")
 message("Building for debug!")
 endif()
 
