--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ message("All optimizations and warnings are enabled. Building for release!")
 endif()
 else()
 set(CMAKE_BUILD_TYPE Debug)
+if(UNIX)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-overloaded-virtual -Wno-unused-parameter -Wno-vla")
+endif()
 message("Building for debug!")
 endif()
 
