--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -12,7 +12,7 @@ jobs:
       CXX: ${{ matrix.compiler }}
     strategy:
       matrix:
-        os: [windows-latest, windows-2022, windows-2019]
+        os: [windows-latest, windows-2022]
         compiler: [g++, cl]
     steps:
       - uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-20.04]
+        os: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04]
     env:
       CC: gcc
       CXX: g++
