refactor continues. Changed the way files are included  + removed triangles and polygons as they are not needed

--- a/Source/Rendering/Objects/CMakeLists.txt
+++ b/Source/Rendering/Objects/CMakeLists.txt
@@ -1,8 +1,9 @@
-file(GLOB OBJECTS *.cpp)
-target_sources(Chronos PRIVATE ${OBJECTS})
+file(GLOB TEXT_OBJECT *.cpp)
+target_sources(Chronos PRIVATE ${TEXT_OBJECT})
 target_include_directories(Chronos PUBLIC .)
 if(CHRONOS_BUILD_EDITOR)
-    target_sources(ChronosEditor PRIVATE ${OBJECTS})
+    target_sources(ChronosEditor PRIVATE ${TEXT_OBJECT})
     target_include_directories(ChronosEditor PUBLIC .)
 endif()
+add_subdirectory(Rectangle)
 add_subdirectory(Text)
