cmake hook for clang formatting. also format the thing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Chronos VERSION 0.0.1)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(GAME_NAME "Chronos")
+include(cmake/FormatClang.cmake)
 
 if(UNIX)
     option(CHRONOS_SUPPORT_WAYLAND "Build with Wayland support" ON)
@@ -59,3 +60,6 @@ endif()
 add_subdirectory(ThirdParty)
 add_subdirectory(Source)
 add_subdirectory(Shaders)
+
+file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES Source/*.cpp Source/*.h Source/*.hpp include/*.h include/*.hpp)
+chronos_clang_format(${ALL_CLANG_FORMAT_SOURCE_FILES})
