--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -16,11 +16,6 @@ jobs:
         compiler: [g++, cl]
     steps:
       - uses: actions/checkout@v3
-      - name: Get Submodules
-        shell: powershell
-        run: |
-          git submodule init
-          git submodule update
       - name: Install dependencies
         shell: powershell
         run: |
@@ -54,11 +49,9 @@ jobs:
       CXX: g++
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies and get git submodules
+      - name: Install dependencies
         run: |
           sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libvulkan-dev libglm-dev gcc-multilib g++-multilib libfreetype6-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
-          git submodule init
-          git submodule update
            
       - name: Configure CMake
         run: >
@@ -82,14 +75,12 @@ jobs:
       CXX: clang++
     steps:
     - uses: actions/checkout@v3
-    - name: Install dependencies and get git submodules
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libvulkan-dev libglm-dev gcc-multilib g++-multilib libfreetype6-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
         sudo apt install -y ninja-build
-        git submodule init
-        git submodule update
-         
+
     - name: Configure CMake
       run: >
         cmake -B build -S . -GNinja
