--- a/Shaders/CMakeLists.txt
+++ b/Shaders/CMakeLists.txt
@@ -1,17 +1,3 @@
-file(GLOB SHADERS SPIV/*.spv)
-
-set(SHADER_PATH "\"${CMAKE_CURRENT_BINARY_DIR}/Shaders/\"")
-
-message("Shader path: ${SHADER_PATH}")
-
-message("Moving shaders to build dir")
-file(COPY ${SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
-
-target_compile_definitions(Chronos PUBLIC SPIV_SHADER_PATH=${SHADER_PATH})
-if(CHRONOS_BUILD_EDITOR)
-    target_compile_definitions(ChronosEditor PUBLIC SPIV_SHADER_PATH=${SHADER_PATH})
-endif()
-
 find_program(GLSLC_EXECUTABLE NAMES glslc)
 
 if (GLSLC_EXECUTABLE)
@@ -28,7 +14,7 @@ else()
   message(FATAL_ERROR "xxd not found. Please install it to proceed.")
 endif()
 
-set(SHADER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/GLSL)
+set(SHADER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 file(GLOB_RECURSE SHADER_SOURCE_FILES  ${SHADER_SOURCE_DIR}/*.frag ${SHADER_SOURCE_DIR}/*.vert)
 set(SHADER_OUTPUT_FILES)
 if(NOT SHADER_SOURCE_FILES)
@@ -51,3 +37,6 @@ foreach(SHADER_SOURCE IN LISTS SHADER_SOURCE_FILES)
 endforeach()
 add_custom_target(ChronosShaders ALL DEPENDS ${SHADER_OUTPUT_FILES})
 add_dependencies(Chronos ChronosShaders)
+add_dependencies(ChronosEditor ChronosShaders)
+target_include_directories(Chronos PUBLIC ${CMAKE_BINARY_DIR}/shaders_header)
+target_include_directories(ChronosEditor PUBLIC ${CMAKE_BINARY_DIR}/shaders_header)
