--- a/Source/Common/CMakeLists.txt
+++ b/Source/Common/CMakeLists.txt
@@ -9,31 +9,31 @@ if(CHRONOS_ENABLE_EXTREME_LOGGING)
     if(CHRONOS_BUILD_EDITOR)
         target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=4)
     endif()
-    message("Extreme logging enabled(level 4)")
+    message(STATUS "Extreme logging enabled(level 4)")
 elseif(CHRONOS_ENABLE_VERBOSE_LOGGING)
     target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=3)
     if(CHRONOS_BUILD_EDITOR)
         target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=3)
     endif()
-    message("Verbose logging enabled(level 3)")
+    message(STATUS "Verbose logging enabled(level 3)")
 elseif(CHRONOS_ENABLE_BASIC_LOGGING)
     target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=2)
     if(CHRONOS_BUILD_EDITOR)
         target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=2)
     endif()
-    message("Basic logging enabled(level 2)")
+    message(STATUS "Basic logging enabled(level 2)")
 elseif(CHRONOS_ENABLE_ERROR_LOGGING)
     target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=1)
     if(CHRONOS_BUILD_EDITOR)
         target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=1)
     endif()
-    message("Error logging enabled(level 1)")
+    message(STATUS "Error logging enabled(level 1)")
 else()
     target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=0)
     if(CHRONOS_BUILD_EDITOR)
         target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=0)           
     endif()
-    message("Logging disabled(level 0)")
+    message(STATUS "Logging disabled(level 0)")
 endif()
 
 target_include_directories(Chronos PUBLIC .)
