--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -13,7 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, windows-2022]
-        compiler: [g++, cl]
+        # compiler: [g++, cl]
+        compiler: [g++]
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
@@ -23,6 +24,8 @@ jobs:
           Expand-Archive -Path 1.3.211.0.zip
           ls 1.3.211.0
           echo "VULKAN_SDK=$(pwd)\1.3.211.0\1.3.211.0\" >>${env:GITHUB_ENV}
+          winget install neovim
+      #if you are wondering why we are installing neovim, well, it contains xxd, and we really need xxd to compile shaders
       - uses: msys2/setup-msys2@v2
         with:
           update: true
